# YueAI-too

./: .gitignore  LICENSE  PROJECT_HANDOFF.md  README.md  config.demo.local.toml  config.example.toml  pyproject.toml  tasks.txt  tmp-audit.jsonl
desktop/: README.md  index.html  package.json  server.js
desktop/src/: app.js  bridgeClient.js  coreSession.js  jsonlBridge.js  mock.js  protocol.js  runtime.js  state.js  styles.css  tauriTransport.js
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: bridge.rs  main.rs
desktop/tests/: protocol.test.js
docs/: ANTHROPIC_PROVIDER.md  CONVERSATION_PROTOCOL.md  CORE_ARCHITECTURE.md  DESKTOP_DEMO.md  DESKTOP_PROTOCOL.md  LLAMA_CPP_PROVIDER.md  OPENAI_COMPAT_PROVIDER.md  PLUGIN_DEVELOPMENT.md
docs/notes/: agent_roadmap.md  agent_start_here.md  app_development_roadmap.md  desktop_bridge_status.md  desktop_debug_pitfalls.md  desktop_ui_priority.md  hardware_constraints.md  memory_and_observer_roadmap.md  model_runtime_direction.md  omni_agent_checklist.md  permissions_and_safety.md  product_direction.md  provider_and_prompt_config.md  runtime_flow_map.md  (+3 more)
examples/: echo.arguments.json
tests/: __init__.py  support.py  test_agent_runs.py  test_anthropic_plugin.py  test_app.py  test_cli.py  test_config.py  test_context_window.py  test_conversation.py  test_desktop.py  test_desktop_demo.py  test_events.py  test_llama_plugin.py  test_openai_compat_plugin.py  test_permissions.py  test_plugins.py  test_provider_health.py  test_schema.py  test_services.py  test_tools.py  test_transport.py
(+41 files in other folders)
