[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "yue-core"
version = "0.4.0"
description = "Local-first, extensible core service for YueAI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "YueAI contributors" }]
dependencies = []

[project.scripts]
yue-core = "yue_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
