[package]
name = "yue-desktop"
version = "0.1.0"
edition = "2024"
description = "YueAI desktop shell workspace"

[package.metadata]
app-id = "com.yueai.desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["test"] }

[features]
default = []
